# NSDotPy

./: .gitignore  README.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: black.yml  poetry.yml
docs/: index.html  search.js
docs/nsdotpy/: session.html
docs/src/: session.html
nsdotpy/: __init__.py  session.py  valid.py  valid_tags.py
src/: __init__.py  session.py
