[tool.poetry]
name = "nsdotpy"
version = "1.1.3"
description = "A wrapper around requests that abstracts away interacting with the HTML nationstates.net site. Focused on legality, correctness, and ease of use."
authors = ["audrey <audreyreal@proton.me>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/sw33ze/NSDotPy"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"
keyboard = "^0.13.5"
tendo = "^0.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pdoc = "^13.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
